# xatlas-wasm

./: .gitignore  .gitmodules  API.md  BUILD.md  CMakeLists.txt  README.md  package.json  prompt.md
.github/prompts/: plan-fixBrowserCompatibility.prompt.md  plan-xatlasWasm.prompt.md
.github/workflows/: publish.yml
example/: index.html  main.mjs  obj-loader.mjs
lib/: xatlas.d.ts  xatlas.mjs
src/: xatlas_wasm.c
test/: test.mjs
